--- a/static/customicons.css
+++ b/static/customicons.css
@@ -6,7 +6,9 @@
 .customicons {
   font-family: "customicons" !important;
 }
-
+.icon-jiahao1:before {
+  content: "\e727";
+}
 .youxi:before {
   content: "\e60e";
 }
